--- a/style.css
+++ b/style.css
@@ -320,6 +320,13 @@ footer a {
         font-size: 16px;
     }
 
+    footer {
+        text-align: center;
+    }
+
+    footer p {
+        font-size: clamp(0.875rem, 0.75269rem + 0.515vw, 1rem);
+    }
 }
 
 .space {
